# zero2prod

./: Cargo.toml  README.md
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
