[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.8"
config = "0.11.0"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
